Closed Bug 1588993 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::ipc::MessageChannel::Send | mozilla::dom::PContentChild::SendInitOtherFamilyNames]

Categories

(Core :: Layout: Text and Fonts, defect, P2)

71 Branch
x86_64
All
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox71 --- wontfix
firefox72 --- fixed

People

(Reporter: over68, Assigned: jfkthame)

References

Details

Crash Data

Attachments

(1 file)

Steps to reproduce:

  1. Set gfx.e10s.font-list.shared to true.
  2. Restart Firefox.
  3. Download Font Loader.
  4. Download Franklin Gothic Book Regular.ttf.
  5. Open this page.
  6. Open the Font Loader, Click on the Add Fonts button, Select the font file Franklin Gothic Book Regular.ttf then click Open.
  7. Click on the Load button.

Actual results:

The tab crashed.
This also happens on startup.

Crash report: bp-cdb19dfa-e476-4433-9b62-b02000191016

Top 10 frames of crashing thread:

0 xul.dll mozilla::ipc::MessageChannel::Send ipc/glue/MessageChannel.cpp
1 xul.dll mozilla::dom::PContentChild::SendInitOtherFamilyNames ipc/ipdl/PContentChild.cpp:5685
2 xul.dll void gfxPlatformFontList::InitOtherFamilyNames gfx/thebes/gfxPlatformFontList.cpp:531
3 xul.dll gfxPlatformFontList::FindAndAddFamilies gfx/thebes/gfxPlatformFontList.cpp:970
4 xul.dll gfxDWriteFontList::FindAndAddFamilies gfx/thebes/gfxDWriteFontList.cpp:1703
5 xul.dll void gfxFontGroup::AddPlatformFont gfx/thebes/gfxTextRun.cpp:1762
6 xul.dll gfxFontGroup::BuildFontList gfx/thebes/gfxTextRun.cpp:1713
7 xul.dll gfxFontGroup::gfxFontGroup gfx/thebes/gfxTextRun.cpp:1696
8 xul.dll nsFontMetrics::nsFontMetrics gfx/src/nsFontMetrics.cpp:133
9 xul.dll nsFontCache::GetMetricsFor gfx/src/nsDeviceContext.cpp:178

Blocks: 1533462

This reproduced for me on macOS as well. It's doing IPC from a stylo thread, which is a no-no.

Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 7 → All
Priority: -- → P2
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/960aac09a135
Don't send InitOtherFamilyNames IPC message from a stylo thread; post a runnable to the main thread instead. r=jwatt
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Assignee: nobody → jfkthame
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: