Bug 1588993 - Don't send InitOtherFamilyNames IPC message from a stylo thread; post a runnable to the main thread instead. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D50745

--HG--
extra : moz-landing-system : lando